--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,4 +1,5 @@
-mode = "symlink"
-encryption = "gpg"
+mode = 'symlink'
+merge.command = 'smerge'
+encryption = 'gpg'
 [gpg]
-    recipient = "willsheffler"
+    recipient = 'willsheffler'
